7/7: insert icon in button, create nut 3 cham

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -26,6 +26,11 @@
     }
 }
 
+.icon + .children,
+.children + .icon {
+    margin-left: 8px;
+}
+
 // Button styles
 .rounded {
     color: rgba(22, 24, 35, 0.75);
