17/7: create,custom logic: MenuTranslate

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -98,6 +98,7 @@
     text-align: left;
     border-radius: 0;
     font-weight: 600;
+    line-height: 1.8rem;
 
     &:hover {
         background: rgba(22, 24, 35, 0.03);
