--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -119,6 +119,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .btn-icon {
+        height: 32px;
+        cursor: pointer;
+        padding: 3px 3px 0;
+        margin-left: 16px;
+        background-color: transparent;
+        font-size: 2.6rem;
+    }
+
+    .icon {
+        width: 26px;
+        height: 26px;
+        display: block;
+    }
+
+    .img-avata {
+        width: 32px;
+        height: 32px;
+        object-fit: cover;
+        background-size: cover;
+        border-radius: 50%;
+        cursor: pointer;
+        margin-left: 16px;
+    }
+
     .more-btn {
         height: 2rem;
         width: 2.8rem;
