--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,4 +1,6 @@
 .wrapper {
+    font-family: 'TikTokFont', sans-serif;
+
     border-radius: 4px;
     padding: 6px 8px;
 
@@ -6,7 +8,7 @@
     min-height: 36px;
 
     color: var(--text-color);
-    font-weight: 700;
+    font-weight: 600;
     font-size: 1.6rem;
 
     cursor: pointer;
@@ -20,6 +22,9 @@
     // }
 
     margin-left: 16px;
+
+    display: flex;
+    align-items: center;
 
     // Độ ưu tiên đầu tiên
     &.disable {
@@ -35,8 +40,8 @@
 
 .icon {
     display: inline-block;
-    width: 24px;
-    text-align: left;
+    width: 20px;
+    // margin-right: 8px;
 }
 
 // Button styles
