--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -130,9 +130,10 @@
     }
 
     .icon {
-        width: 26px;
-        height: 26px;
-        display: block;
+        width: 2.6rem;
+        height: 2.6rem;
+        display: flex;
+        text-align: end;
     }
 
     .img-avata {
