--- a/src/components/Layouts/components/Search/Search.module.scss
+++ b/src/components/Layouts/components/Search/Search.module.scss
@@ -17,6 +17,7 @@
     caret-color: var(--primary);
 
     input {
+        font-family: var(--font-family);
         flex: 1;
         height: 100%;
         color: var(--black);
