--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    font-family: 'TikTokFont', sans-serif;
+    font-family: var(--font-family);
 
     border-radius: 4px;
     padding: 6px 8px;
