--- a/src/components/Global/GlobalStyles.scss
+++ b/src/components/Global/GlobalStyles.scss
@@ -47,6 +47,9 @@ body {
     text-rendering: optimizeSpeed;
     color: var(--text-color);
 
+    // scroll
+    overflow-y: overlay;
+
     // custom tippy tooltip
     .tippy-box {
         background-color: rgba(84, 84, 84, 0.92);
@@ -56,6 +59,21 @@ body {
         font-size: 1.6rem;
         line-height: 2.1rem;
     }
+}
+// scrollbar
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, 0.06);
+}
+
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 //
