--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -10,7 +10,26 @@
     display: flex;
     flex-direction: column;
 }
+
+.menu-body {
+    overflow-y: auto;
+}
+
 // Menu item
+.menuSetting {
+    height: 4.4rem;
+    margin-left: 0;
+    width: 100%;
+    padding: 10px 8px 10px 16px;
+    text-align: left;
+    border-radius: 0;
+    font-weight: 600;
+    line-height: 1.8rem;
+
+    &:hover {
+        background: rgba(22, 24, 35, 0.03);
+    }
+}
 
 //Menu translate
 .header {
@@ -19,6 +38,7 @@
     align-items: center;
     height: 50px;
     position: relative;
+    flex-shrink: 0;
 }
 
 .back-btn {
