--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -1,12 +1,17 @@
+.wrapper {
+    width: 500px;
+    min-width: 184px;
+}
 .search-result,
 .search {
     // width: var(--search-iframe-size);
-    width: 500px;
+    width: 100%;
 }
 
 .search {
     position: relative;
     display: flex;
+
     height: var(--search-height);
     background-color: rgba(22, 24, 35, 0.06);
     border-radius: var(--search-border-radius);
@@ -17,9 +22,12 @@
     caret-color: var(--primary);
 
     input {
+        padding-right: 40px;
         font-family: var(--font-family);
         flex: 1;
+        width: 100%;
         height: 100%;
+
         color: var(--black);
         font-size: 1.6rem;
         background-color: transparent;
@@ -95,5 +103,13 @@
 
     &:hover {
         cursor: pointer;
+    }
+}
+
+// responsive
+
+@media screen and (max-width: 790px) {
+    .wrapper {
+        display: none;
     }
 }
