create menu in sidebar

--- a/src/layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/layouts/components/Sidebar/Sidebar.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-    // background: rgb(255, 255, 255);
-    background-color: #ccc;
+    background: rgb(255, 255, 255);
+    // background-color: #ccc;
 
     padding: 20px 0px 26px 8px;
     box-sizing: border-box;
