--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -81,3 +81,15 @@
         padding: 0 4px;
     }
 }
+
+.btn-login {
+    display: flex;
+    justify-content: center;
+    .login {
+        font-family: TikTokFont, Arial, Tahoma, PingFangSC, sans-serif;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 21px;
+        letter-spacing: 0.03px;
+    }
+}
